[package]
name = "congrats-phasm-wasm"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Thin wasm-bindgen bridge to phasm-core Ghost (J-UNIWARD) for Congrats Steg"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phasm-core = { path = "/tmp/phasmcore", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
